customer-profile-page

--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -376,6 +376,12 @@ opacity
 
 
 
+
+
+
+
+
+
 :
 
 
@@ -414,7 +420,13 @@ opacity
 
 
 
+
+
+
  
+
+
+
 
 
 
@@ -528,7 +540,16 @@ opacity
 
 
 
+
+
+
+
+
+
 :
+
+
+
 
 
 
@@ -604,7 +625,16 @@ opacity
 
 
 
+
+
+
 scale
+
+
+
+
+
+
 
 
 
@@ -755,7 +785,16 @@ transform
 
 
 
+
+
+
+
+
+
 :
+
+
+
 
 
 
@@ -831,7 +870,16 @@ transform
 
 
 
+
+
+
 scale
+
+
+
+
+
+
 
 
 
@@ -993,6 +1041,12 @@ opacity
 
 
 
+
+
+
+
+
+
 :
 
 
@@ -1031,7 +1085,13 @@ opacity
 
 
 
+
+
+
  
+
+
+
 
 
 
@@ -1145,7 +1205,16 @@ opacity
 
 
 
+
+
+
+
+
+
 :
+
+
+
 
 
 
@@ -1221,7 +1290,16 @@ opacity
 
 
 
+
+
+
 scale
+
+
+
+
+
+
 
 
 
@@ -1372,7 +1450,19 @@ transform
 
 
 
+
+
+
+
+
+
 :
+
+
+
+
+
+
 
 
 
@@ -1474,6 +1564,12 @@ scale
 
 
 
+
+
+
+
+
+
 (1);
 }
 }
@@ -1486,7 +1582,7 @@ scale
 	position: relative;
 }
 
-.panel>.panel-heading:after, .panel>.panel-heading:before {
+.panel .panel-heading:after, .panel .panel-heading:before {
 	position: absolute;
 	top: 11px;
 	left: -16px;
@@ -1500,14 +1596,14 @@ scale
 	pointer-events: none;
 }
 
-.panel>.panel-heading:after {
+.panel .panel-heading:after {
 	border-width: 7px;
 	border-right-color: #f7f7f7;
 	margin-top: 1px;
 	margin-left: 2px;
 }
 
-.panel>.panel-heading:before {
+.panel .panel-heading:before {
 	border-right-color: #ddd;
 	border-width: 8px;
 }
@@ -1693,7 +1789,7 @@ scale
 	min-height: 38px;
 }
 
-.signin-btn, .signup-btn {
+.signin-btn, .signup-btn, .save-btn {
 	font-size: 15px;
 	font-weight: bold;
 }
@@ -1788,4 +1884,55 @@ scale
 
 textarea {
 	resize: none;
+}
+
+.sidebar {
+	background: #f5f5f5;
+	min-height: 100%;
+	border-left: 5px solid #fff;
+}
+
+.logo img {
+	margin-top: 10px;
+	padding: 3px;
+	border: 3px solid #000000;
+	border-radius: 100%;
+}
+
+.list {
+	list-style: none;
+	padding-left: 0px;
+}
+
+.list li {
+	padding: 10px 0px 10px 40px;
+}
+
+li a {
+	color: #000;
+}
+
+li a:hover {
+	text-decoration: none;
+	color: #000;
+	font-weight: bolder;
+}
+
+.list li:hover {
+	background-color: #ffffff;
+	border: 1px solid #000;
+	color: #000;
+	font-weight: bolder;
+	padding-left: 35px;
+	cursor: pointer;
+}
+
+.customer-content {
+	text-align: center;
+}
+
+.avatar img {
+	margin-top: 30px;
+	padding: 3px;
+	border: 1px solid #000000;
 }
