fix bugs schedule page

--- a/WebContent/css/custom.css
+++ b/WebContent/css/custom.css
@@ -1695,8 +1695,7 @@ scale
 	line-height: 1.5em;
 	background-color: #2aacf1;
 	width: 500px;
-	height: 100%;
-	
+	height: 200px;
 }
 
 .modal-title {
@@ -1984,7 +1983,7 @@ li a:hover {
 	display: none;
 }
 
-.other-address {
+.other-infor, .close-other-infor-toggle {
 	display: none;
 }
 
